# claw-compiler

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  INSTALL_Ant.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.dev.md  README.md  ant-solution.xml  decl.f90  github_omni-compiler-mch-deploy_key.enc  properties.cmake  sonar-project.properties  xcodeml.md
cx2t/: CMakeLists.txt  claw-dependencies.xml  claw.properties  claw.properties.in  common-targets.xml  ivy.xml
cx2t/common/: claw.properties.in  targets.xml
cx2t/config/: claw_code_style_idea.xml
cx2t/src/: CMakeLists.txt  build.xml
cx2t/src/claw/: ClawVersion.java.in  ClawX2T.java  Options.java
cx2t/unittest/: CMakeLists.txt  build.xml
cx2t/unittest/data/: assignStatement.xml  assignStatement2.xml  basic.xml  declarations.xml  loop_dependence.xml  loop_dependence3d.xml  model.toml  model_malformatted.toml  modeldata1.xml  perfectly_nested.xml  promotion.xml
cx2t/unittest/helper/: TestConstant.java.in  Utils.java  XmlHelper.java
documentation/: .gitignore  CMakeLists.txt  claw_fortran_compiler.tex
documentation/developer/: CMakeLists.txt  claw_tatsu.tex  developers_guide.bib  developers_guide.tex  guide_architecture.tex  guide_claw_parser.tex  guide_claw_shenron.tex  guide_claw_tatsu_ast_library.tex  guide_claw_transformation_primitive.tex  guide_configuration.tex  guide_transformation.tex  guide_xcodeml_ast_manipulation.tex
documentation/developer/code/: MyFirstTransformation.java  basic_fortran.f90  basic_fortran.xml  claw-default.xml  claw-internal-set.xml  clawp.g4  extension_config.xml  external-set.xml  external_config.xml  mydirective_orig.f90  mydirective_trans.f90  trans_dependent.f90
documentation/manual/: CMakeLists.txt  claw_fortran_compiler.tex
driver/: CMakeLists.txt  clawc.conf.in  clawc.in  clawfc.in  clawfc.properties.in
driver/etc/: claw-autoport-set.xml  claw-default.xml  claw-external-set.xml  claw-high-level-set.xml  claw-internal-set.xml  claw-low-level-set.xml  claw_conf.py.in  claw_config.xsd  claw_f.conf.in  claw_transformation_set.xsd  clawfc.properties.in
driver/libexec/: claw_f_lib.sh  claw_f_lib.sh.in
driver/src/: Driver.java  build.xml
driver/src/clawfc/: AddIgnoreDirectiveFilter.java  Build.java  BuildInfo.java  BuildOrder.java  CLAWAddIgnoreScanner.g4  CLAWIgnoreLineRecognizer.g4  CLAWRemoveIgnoreScanner.g4  CLAWVerbatimLineRecognizer.g4  CLAWVerbatimScanner.g4  CommentTrailingBackslashRecognizer.g4  CommentTrailingBackslashRecognizer.java  Configuration.java  Driver.java  FileInfo.java  FortranFileBuildInfoData.java  FortranFileProgramUnitInfoData.java  FortranFrontEnd.java  FortranPreprocessor.java  IgnoreDirectiveRecognizer.java  ModuleData.java  ModuleInfo.java  Options.java  PreprocessedFortranSourceData.java  Preprocessor.java  ProgramUnitData.java  ProgramUnitInfo.java  RemoveIgnoreDirectiveFilter.java  RemoveVerbatimDirectiveFilter.java  TrailingBackslashCommentsFilter.java  Utils.java  VerbatimDirectiveRecognizer.java  XmodData.java
driver/tests/: CMakeLists.txt  build.xml
driver/tests/src/: Resources.java.in
driver/unittests/: CMakeLists.txt  build.xml
driver/unittests/src/: Resources.java.in
modules/: CMakeLists.txt  ieee_arithmetic.f90  openacc_lib.f90
modules/intel/: ifcore.f90
omni-cx2x/src/: CMakeLists.txt  build.xml  ivy.xml
omni-cx2x/src/claw/: ClawVersion.java  ClawX2T.java
omni-cx2x/src/cx2x/: ClawVersion.java.in  Cx2x.java
omni-cx2x/src/x2x/: ClawX2X.java  Cx2x.java
test/: CMakeLists.txt  README.md  base_test.cmake  claw_reference_test.cmake  compare_output.sh  failure_test.cmake  module_test.cmake  reference_test.cmake
test/claw/: CMakeLists.txt
test/claw/abstraction/: CMakeLists.txt
test/claw/abstraction1/: CMakeLists.txt  main.f90  mo_column.f90  original_code.f90  reference_cpu.f90  reference_gpu.f90  reference_main_cpu.f90  reference_main_gpu.f90
test/claw/abstraction10/: CMakeLists.txt  mo_column.f90  reference_cpu.f90  reference_gpu.f90
test/claw/abstraction11/: CMakeLists.txt  main.f90  mo_column.f90  reference_cpu.f90  reference_gpu.f90  reference_main_gpu.f90
test/claw/abstraction12/: CMakeLists.txt  main.f90  mo_column.f90  reference_cpu.f90  reference_gpu.f90  reference_main_cpu.f90
test/claw/abstraction13/: CMakeLists.txt  main.f90  mo_column.f90  reference_cpu.f90  reference_gpu.f90  reference_main_gpu.f90
test/claw/abstraction14/: CMakeLists.txt  reference_cpu.f90  reference_gpu.f90
test/claw/abstraction15/: CMakeLists.txt  mo_column.f90  reference_cpu.f90  reference_gpu.f90  reference_main_gpu.f90
test/claw/abstraction16/: CMakeLists.txt  main.f90  mo_column_extra.f90  reference_cpu.f90  reference_gpu.f90  reference_main_cpu.f90  reference_main_gpu.f90
test/claw/abstraction17/: CMakeLists.txt  main.f90  mo_column.f90  reference_gpu.f90  reference_main_cpu.f90
test/claw/abstraction18/: CMakeLists.txt  main.f90  mo_column.f90  reference_cpu.f90  reference_gpu.f90
test/claw/abstraction19/: CMakeLists.txt  mo_column.f90  reference_cpu.f90  reference_gpu.f90  reference_main_gpu.f90
test/claw/abstraction2/: CMakeLists.txt  main.f90  mo_column.f90  original_code.f90  reference_cpu.f90  reference_gpu.f90  reference_main_cpu.f90
test/claw/abstraction20/: CMakeLists.txt  main.f90  mo_column.f90  reference_cpu.f90  reference_gpu.f90
test/claw/abstraction21/: CMakeLists.txt  main.f90  reference_cpu.f90  reference_gpu.f90  reference_main_gpu.f90
test/claw/abstraction22/: CMakeLists.txt  main.f90  mo_column.f90  reference_cpu.f90  reference_gpu.f90  reference_main_cpu.f90  reference_main_gpu.f90
test/claw/abstraction23/: CMakeLists.txt  mo_column.f90  reference_cpu.f90  (+1 more)
test/driver/: CMakeLists.txt
test/fortran/: CMakeLists.txt
test/lib/: test.claw_f_lib
test/loops/: CMakeLists.txt
test/omni/: CMakeLists.txt
test/openacc/: CMakeLists.txt
test/openmp/: CMakeLists.txt
test/options/: CMakeLists.txt
test/serialization/: CMakeLists.txt
test/utilities/: CMakeLists.txt
xcodeml-transform/src/: CMakeLists.txt
(+2450 files in other folders)
