# This file is released under terms of BSD license
# See LICENSE file for more information

# This CMake file define the configuration and the installation steps of the
# claw compiler driver

if(APPLE)
  set(SHA1SUM_CMD "shasum")
else()
  set(SHA1SUM_CMD "sha1sum")
endif()

# Configure files with variables information
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONF_FILE}.in
  ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONF_FILE}
  @ONLY
)
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}.in
  ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}
  @ONLY
)
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/libexec/${CLAW_LIB_SH}.in
  ${CMAKE_CURRENT_SOURCE_DIR}/libexec/${CLAW_LIB_SH}
  @ONLY
)

# Copy the executable to be used by the test directly before installation
file(REMOVE ${CMAKE_CURRENT_SOURCE_DIR}/${CLAW_COMPILER_FILE})
file(REMOVE ${CMAKE_CURRENT_SOURCE_DIR}/${CLAW_COMPILER_FILE}_test)
file(
  COPY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}
  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/
  FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
)


# Install steps

# Driver and libs
install(
  FILES ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONF_FILE}
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
  DESTINATION ${CMAKE_INSTALL_PREFIX}/etc
)
install(
  FILES ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
  DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
)
install(
  FILES ${CMAKE_CURRENT_SOURCE_DIR}/libexec/${CLAW_LIB_SH}
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
  DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec
)

# Configuration files
install(
  FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONFIG_XSD}
    ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONFIG_FILE}
    ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONFIG_SET_XSD}
    ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_TRANS_SET_INTERNAL}
    ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_TRANS_SET_LOW}
    ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_TRANS_SET_HIGH}
  PERMISSIONS
    OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
  DESTINATION
    ${CMAKE_INSTALL_PREFIX}/etc
)

set(CLAW_X2T_CONFIG_PATH "${CMAKE_SOURCE_DIR}/driver/etc/")
set(CLAW_X2T_DRIVER_LIB_DIR "${CMAKE_SOURCE_DIR}/driver/libexec/")
set(CLAW_X2T_TATSU_JAR "${CMAKE_BINARY_DIR}/build/${CLAW_X2T_TATSU}.jar")
set(CLAW_X2T_SHENRON_JAR "${CMAKE_BINARY_DIR}/build/${CLAW_X2T_SHENRON}.jar")
set(CLAW_X2T_WANI_JAR "${CMAKE_BINARY_DIR}/build/${CLAW_X2T_WANI}.jar")
set(CLAW_X2T_CONFIG_PATH "${CMAKE_SOURCE_DIR}/driver/etc/")
set(CLAW_XMOD_GENERIC "${CMAKE_BINARY_DIR}/modules/")

set(ANTLR4 "${CMAKE_SOURCE_DIR}/cx2t/lib/${ANTLR4_NAME}.jar")
set(ANTLR4_RUNTIME "${CMAKE_SOURCE_DIR}/cx2t/lib/${ANTLR4_RUNTIME_NAME}.jar")
set(COMMON_CLI "${CMAKE_SOURCE_DIR}/cx2t/lib/${COMMON_CLI_NAME}.jar")
set(TOML "${CMAKE_SOURCE_DIR}/cx2t/lib/${TOML_NAME}.jar")


configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONF_FILE}.in
  ${CMAKE_CURRENT_SOURCE_DIR}/etc/${CLAW_CONF_FILE}_test
  @ONLY
)
set(CLAW_CONF_FILE "${CLAW_CONF_FILE}_test")
configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}.in
  ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}_test
  @ONLY
)
file(
  COPY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CLAW_COMPILER_FILE}_test
  DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/
  FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
)
